--- a/ios11NavBar/Base.lproj/Main.storyboard
+++ b/ios11NavBar/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.19" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="71o-Lf-5In">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="71o-Lf-5In">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.16"/>
+        <deployment version="4352" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,13 +14,27 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="NewViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="f9f-ch-lby"/>
-                        <viewControllerLayoutGuide type="bottom" id="JCX-od-Wse"/>
+                        <viewControllerLayoutGuide type="top" id="YDu-Jp-HXs"/>
+                        <viewControllerLayoutGuide type="bottom" id="iPG-Zq-kAA"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ycv-i0-ogL">
+                                <rect key="frame" x="0.0" y="637" width="375" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="VEW-hw-lWz"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ycv-i0-ogL" secondAttribute="bottom" id="K0v-qc-77U"/>
+                            <constraint firstItem="ycv-i0-ogL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ad1-ep-sT7"/>
+                            <constraint firstAttribute="trailing" secondItem="ycv-i0-ogL" secondAttribute="trailing" id="neP-EA-qEa"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="aVS-Pc-A0w"/>
                 </viewController>
@@ -32,8 +47,8 @@
             <objects>
                 <viewController id="o0n-UY-UH7" customClass="OldViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="sHl-6y-uWg"/>
-                        <viewControllerLayoutGuide type="bottom" id="E3B-W5-SDf"/>
+                        <viewControllerLayoutGuide type="top" id="dSR-Hh-Yq9"/>
+                        <viewControllerLayoutGuide type="bottom" id="Vsy-EP-dfA"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ScJ-Fc-kRs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -44,15 +59,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7b3-Mt-ITE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1418" y="798"/>
+            <point key="canvasLocation" x="1416.8" y="797.45127436281871"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="IzD-9X-lOF">
             <objects>
                 <viewController id="Lle-XC-rBV" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="9wM-vo-eJa"/>
-                        <viewControllerLayoutGuide type="bottom" id="n8h-bn-5RL"/>
+                        <viewControllerLayoutGuide type="top" id="AhU-wh-KIR"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ioc-nE-utQ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="12g-XB-Jpb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -63,6 +78,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Lle-XC-rBV" id="vNi-zr-HQv"/>
+                                    <outlet property="delegate" destination="Lle-XC-rBV" id="6h6-Ty-mb4"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -75,6 +91,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zev-eA-wZ0"/>
+                    <connections>
+                        <outlet property="tableView" destination="RVT-27-Z4G" id="Oi2-O0-hZH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1a1-Z7-ZKj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -87,7 +106,7 @@
                     <tabBarItem key="tabBarItem" title="&gt;=iOS11" id="oFG-qG-APl"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dRK-Pf-1wP">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -102,7 +121,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="oEY-oi-wAs">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="71o-Lf-5In" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="71o-Lf-5In" customClass="TabBarController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="AJh-TN-FmA">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -126,7 +145,7 @@
                     <tabBarItem key="tabBarItem" title="&lt;iOS11" id="ypj-T6-6U9"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="DZs-ap-GT1">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -145,7 +164,7 @@
                     <tabBarItem key="tabBarItem" title="LargeTitle" id="xGb-R8-Xa4"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rkz-1Y-ulZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
