--- a/ios11NavBar/Resource/Base.lproj/Main.storyboard
+++ b/ios11NavBar/Resource/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--New View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="NewViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RTNewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="WAa-bs-mJW"/>
                         <viewControllerLayoutGuide type="bottom" id="gRE-43-Vbq"/>
@@ -28,12 +28,26 @@
                                     <constraint firstAttribute="height" constant="34" id="VEW-hw-lWz"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MMu-Jz-sHT">
+                                <rect key="frame" x="30" y="311" width="315" height="45"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="dTU-fp-Rhr"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="pushAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jo3-NR-Utf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="ycv-i0-ogL" secondAttribute="bottom" id="K0v-qc-77U"/>
+                            <constraint firstItem="MMu-Jz-sHT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="NV7-XQ-AZp"/>
                             <constraint firstItem="ycv-i0-ogL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ad1-ep-sT7"/>
+                            <constraint firstItem="MMu-Jz-sHT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="f8k-G9-JwP"/>
                             <constraint firstAttribute="trailing" secondItem="ycv-i0-ogL" secondAttribute="trailing" id="neP-EA-qEa"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MMu-Jz-sHT" secondAttribute="trailing" constant="30" id="qvh-Y1-0Bf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="aVS-Pc-A0w"/>
@@ -45,7 +59,7 @@
         <!--Old View Controller-->
         <scene sceneID="ika-YI-K2U">
             <objects>
-                <viewController id="o0n-UY-UH7" customClass="OldViewController" sceneMemberID="viewController">
+                <viewController id="o0n-UY-UH7" customClass="RTOldViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="z2o-9j-bVR"/>
                         <viewControllerLayoutGuide type="bottom" id="U9v-kE-WOV"/>
@@ -61,10 +75,10 @@
             </objects>
             <point key="canvasLocation" x="1416.8" y="797.45127436281871"/>
         </scene>
-        <!--View Controller-->
+        <!--Large Title View Controller-->
         <scene sceneID="IzD-9X-lOF">
             <objects>
-                <viewController id="Lle-XC-rBV" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="Lle-XC-rBV" customClass="RTLargeTitleViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="p5W-TD-kF5"/>
                         <viewControllerLayoutGuide type="bottom" id="XNc-KU-l6q"/>
@@ -121,7 +135,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="oEY-oi-wAs">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="71o-Lf-5In" customClass="TabBarController" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="71o-Lf-5In" customClass="RTTabBarController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="AJh-TN-FmA">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
